--- a/online-zoo/pages/landing/style.css
+++ b/online-zoo/pages/landing/style.css
@@ -1001,7 +1001,7 @@ button {
 .testimonials__leav {
 	width: 20%;
 	height: 44%;
-	right: -10px;
+	right: 0;
 	bottom: 20px;
 }
 
@@ -1147,7 +1147,7 @@ main {
 .backstage__right {
 	width: 24%;
 	height: 120%;
-	right: -40px;
+	right: 0;
 }
 
 .backstage__content {
@@ -1305,7 +1305,7 @@ main {
 
 .testimonials__leav {
 	height: 39%;
-	right: -24px;
+	right: 0;
 	bottom: -86px;
 }
 
@@ -1434,7 +1434,7 @@ main {
 .backstage__right {
 	width: 22%;
 	height: 62%;
-	right: -35px;
+	right: 0;
 	top: 16%;
 }
 
@@ -1482,7 +1482,7 @@ main {
 	bottom: -33px;
 	width: 28%;
 	height: 5%;
-	right: -15px;
+	right: 0;
 }
 
 .food .container {
